--- a/testing/web-platform/tests/css/css-pseudo/parsing/the-check-pseudo-element.tentative.html
+++ b/testing/web-platform/tests/css/css-pseudo/parsing/the-check-pseudo-element.tentative.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>CSS ::check Pseudo-Element Test</title>
+<title>CSS ::checkmark Pseudo-Element Test</title>
 <link rel="help" href="https://github.com/w3c/csswg-drafts/pull/10986">
-<meta name="assert" content="This test checks the validity of the ::check pseudo element selector." />
+<meta name="assert" content="This test checks the validity of the ::checkmark pseudo element selector." />
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/css/support/parsing-testcommon.js"></script>
 <script>
-test_valid_selector("::check");
-test_valid_selector("*::check", "::check");
-test_valid_selector("foo.bar[baz]::check");
-test_invalid_selector("::check *");
+test_valid_selector("::checkmark");
+test_valid_selector("*::checkmark", "::checkmark");
+test_valid_selector("foo.bar[baz]::checkmark");
+test_invalid_selector("::checkmark *");
 
 // Combinations
-test_invalid_selector("::check::check");
+test_invalid_selector("::checkmark::checkmark");
 
-test_invalid_selector("::before::check");
-test_invalid_selector("::after::check");
-test_invalid_selector("::marker::check");
-test_invalid_selector("::placeholder::check");
+test_invalid_selector("::before::checkmark");
+test_invalid_selector("::after::checkmark");
+test_invalid_selector("::marker::checkmark");
+test_invalid_selector("::placeholder::checkmark");
 
-test_invalid_selector("::check::before");
-test_invalid_selector("::check::after");
-test_valid_selector("::check::marker");
-test_invalid_selector("::check::placeholder");
+test_invalid_selector("::checkmark::before");
+test_invalid_selector("::checkmark::after");
+test_valid_selector("::checkmark::marker");
+test_invalid_selector("::checkmark::placeholder");
 
-test_invalid_selector("::slotted(*)::check::slotted(*)");
-test_valid_selector("::slotted(*)::check");
+test_invalid_selector("::slotted(*)::checkmark::slotted(*)");
+test_valid_selector("::slotted(*)::checkmark");
 
-test_valid_selector("::part(foo)::check");
+test_valid_selector("::part(foo)::checkmark");
 </script>
