Bug 1933465 [wpt PR 49374] - [scope] Allow inserting CSSNestedDeclarations rule in top-level scope, a=testonly
Automatic update from web-platform-tests
[scope] Allow inserting CSSNestedDeclarations rule in top-level scope

This was previously only allowed when scope was a nested group rule,
but as of CL:6020075 it's allowed top level as well.

Bug: 351045927
Change-Id: Ic6d60f745c433a759f52b3e0e0e6903fc0a57f38
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6039155
Reviewed-by: Steinar H Gunderson <sessechromium.org>
Commit-Queue: Anders Hartvoll Ruud <andruudchromium.org>
Cr-Commit-Position: refs/heads/main{#1388174}

--

wpt-commits: 166fa1e9d6732eb779ae94ecdbc3a4b0d2530007
wpt-pr: 49374

UltraBlame original commit: f34d9e7db919cd0b2ea9ba08f59832c2d839f102

--- a/testing/web-platform/tests/css/css-cascade/scope-nesting.html
+++ b/testing/web-platform/tests/css/css-cascade/scope-nesting.html
@@ -652,3 +652,28 @@ test((t) => {
   assert_equals(getComputedStyle(child).color, 'rgb(0, 128, 0)');
 }, 'Insert a nested style rule within @scope, :scope');
 </script>
+
+<template id=test_insert_nested_declarations_directly>
+<style>
+  :where(.a) {
+    color: red;
+  }
+  @scope (.a) {
+  }
+</style>
+<div class=a>
+  <div id=child>Foo</div>
+</div>
+</template>
+<script>
+test((t) => {
+  t.add_cleanup(() => main.replaceChildren());
+  main.append(test_insert_nested_declarations_directly.content.cloneNode(true));
+  assert_equals(getComputedStyle(child).color, 'rgb(255, 0, 0)');
+  let scope_rule = main.querySelector('style').sheet.cssRules[1];
+  assert_true(scope_rule instanceof CSSScopeRule);
+  scope_rule.insertRule('color: green');
+  assert_true(scope_rule.cssRules[0] instanceof CSSNestedDeclarations);
+  assert_equals(getComputedStyle(child).color, 'rgb(0, 128, 0)');
+}, 'Insert a CSSNestedDeclarations rule directly in top-level @scope');
+</script>
