--- a/testing/web-platform/tests/html/cross-origin-opener-policy/coop-noopener-allow-popups.https.html
+++ b/testing/web-platform/tests/html/cross-origin-opener-policy/coop-noopener-allow-popups.https.html
@@ -9,8 +9,8 @@
 <script src="/common/dispatcher/dispatcher.js"></script>
 <script src="/common/get-host-info.sub.js"></script>
 <script src="/common/utils.js"></script>
-<script src="../../resources/common.js"></script>
-<script src="../../resources/noopener-helper.js"></script>
+<script src="./resources/common.js"></script>
+<script src="./resources/noopener-helper.js"></script>
 <script>
 
 
@@ -39,6 +39,10 @@ test_noopener_opening_popup("same-origin-allow-popups",
                             SAME_ORIGIN,
                             /*opener_expectation=*/false);
 test_noopener_opening_popup("same-origin",
+                            "noopener-allow-popups",
+                            SAME_ORIGIN,
+                            /*opener_expectation=*/false);
+test_noopener_opening_popup("unsafe-none",
                             "noopener-allow-popups",
                             SAME_ORIGIN,
                             /*opener_expectation=*/false);
