Bug 1933805 [wpt PR 49409] - Another attempt at deflaking LoAF tests, a=testonly
Automatic update from web-platform-tests
Another attempt at deflaking LoAF tests

We pass the busy_wait function as a parameter that observes the LoAF
and resolves the promise.

The reference timestamp is in the middle of the busy_wait period.

The usual busy_wait time is not used for LoAF creation, however
sometimes it is made accessible on the window for external script
blocks.

Bug: 40263438
Change-Id: If37c18ef6d760dc5e10f3bbe7155f921aba6b618
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6037601
Reviewed-by: Michal Mocny <mmocnychromium.org>
Commit-Queue: Noam Rosenthal <nrosenthalchromium.org>
Cr-Commit-Position: refs/heads/main{#1388978}

--

wpt-commits: 14eaacf2d1341b7215aced0123a7e3e719f3fe03
wpt-pr: 49409

UltraBlame original commit: 0af3ed2637b9700fd8d76415d587607d04e8e767

--- a/testing/web-platform/tests/long-animation-frame/tentative/loaf-source-location.html
+++ b/testing/web-platform/tests/long-animation-frame/tentative/loaf-source-location.html
@@ -12,7 +12,7 @@
 <script>
 
 promise_test(async t => {
-  const [entry, script] = await expect_long_frame_with_script(() => {
+  const [entry, script] = await expect_long_frame_with_script((t, busy_wait) => {
     requestAnimationFrame(function non_bound_function() {
       busy_wait();
     });
@@ -23,7 +23,7 @@ promise_test(async t => {
 }, "Source location should be extracted from non-bound functions");
 
 promise_test(async t => {
-  const [entry, script] = await expect_long_frame_with_script(() => {
+  const [entry, script] = await expect_long_frame_with_script((t, busy_wait) => {
     const object = {};
     requestAnimationFrame((function my_bound_function() {
       busy_wait();
@@ -35,7 +35,7 @@ promise_test(async t => {
 }, "Source location should be extracted from bound functions");
 
 promise_test(async t => {
-  const [entry, script] = await expect_long_frame_with_script(() => {
+  const [entry, script] = await expect_long_frame_with_script((t, busy_wait) => {
     t.step_timeout(function my_timeout() {
       busy_wait();
     });
@@ -45,7 +45,7 @@ promise_test(async t => {
 
 promise_test(async t => {
   const scriptLocation = new URL("resources/promise-generates-loaf.js", location.href);
-  const [entry, script] = await expect_long_frame_with_script(() => {
+  const [entry, script] = await expect_long_frame_with_script((t, busy_wait) => {
     const scriptElement = document.createElement("script");
     scriptElement.src = scriptLocation;
     document.body.appendChild(scriptElement);
