--- a/testing/web-platform/tests/long-animation-frame/tentative/loaf-source-location-redirect.html
+++ b/testing/web-platform/tests/long-animation-frame/tentative/loaf-source-location-redirect.html
@@ -38,7 +38,7 @@ function test_source_location_with_redirect({path, type, name}) {
       const VERY_LONG_FRAME_DURATION = 360;
       const preRedirectURL = crossOriginRedirectURL(path, cors);
       const postRedirectURL = targetURL(path, cors);
-      let [entry, script] = await expect_long_frame_with_script(() => {
+      let [entry, script] = await expect_long_frame_with_script((t, busy_wait) => {
         const script = document.createElement("script");
         script.src = preRedirectURL;
         if (scriptType === "module")
