--- a/testing/web-platform/tests/css/css-values/attr-security.html
+++ b/testing/web-platform/tests/css/css-values/attr-security.html
@@ -5,11 +5,6 @@
 <script src="/resources/testharnessreport.js"></script>
 
 <style>
-  @property --some-url {
-    syntax: "<url>";
-    inherits: false;
-    initial-value: "empty";
-  }
   @property --some-string {
     syntax: "<string>";
     inherits: false;
@@ -48,6 +43,26 @@
         });
 
         elem.style.setProperty(property, null);
+    }
+
+    function test_registered_custom_property(customPropertyName, customPropertySyntax, customPropertyInitialValue,
+                                             attrValue, expectedValue) {
+      window.CSS.registerProperty({
+        name: customPropertyName,
+        syntax: customPropertySyntax,
+        inherits: false,
+        initialValue: customPropertyInitialValue,
+      });
+      var elem = document.getElementById("attr");
+      elem.setAttribute("data-foo", attrValue);
+      var attrString = "attr(data-foo type(" + customPropertySyntax + "))";
+      elem.style.setProperty(customPropertyName, attrString);
+      test(() => {
+          assert_equals(window.getComputedStyle(elem).getPropertyValue(customPropertyName),
+                        expectedValue,
+                          "'" + customPropertyName + ": " + attrString + "' with data-foo='" + attrValue + "'");
+      });
+      elem.style.setProperty(customPropertyName, null);
     }
 
     // Direct use.
@@ -95,10 +110,6 @@
               'attr(data-foo type(<url>))',
               'url(https://does-not-exist.test/404.png)',
               'url("https://does-not-exist.test/404.png")');
-    test_attr('--some-url',
-              'attr(data-foo type(<url>))',
-              'url(https://does-not-exist.test/404.png)',
-              'none');
     test_attr('background-image',
               'attr(data-foo type(<url>))',
               'url(https://does-not-exist.test/404.png)',
@@ -107,7 +118,6 @@
               'url("https://does-not-exist.test/404.png")',
               'url(https://does-not-exist.test/404.png)',
               'url("https://does-not-exist.test/404.png")');
-
 
     test_attr('--x',
               'image(attr(data-foo))',
@@ -121,6 +131,11 @@
               'image("https://does-not-exist.test/404.png")',
               'https://does-not-exist.test/404.png',
               'image(url("https://does-not-exist.test/404.png"))');
+
+    test_attr('background-image',
+              'url(https://does-not-exist.test/404.png), attr(data-foo type(<image>))',
+              'linear-gradient(#000000, #ffffff)',
+              'url("https://does-not-exist.test/404.png"), linear-gradient(rgb(0, 0, 0), rgb(255, 255, 255))');
 
     // The remaining tests use image-set(), but should be equivalent for image() etc.
 
@@ -153,6 +168,8 @@
               'image-set(var(--some-string-list))',
               'https://does-not-exist.test/404.png',
               'none');
+    test_registered_custom_property('--registered-url', '<url>', 'url("https://does-not-exist.test/empty-url")', 'https://does-not-exist.test/404.png', 'url("https://does-not-exist.test/empty-url")');
+    test_registered_custom_property('--registered-color', '<color>', 'red', 'blue', 'rgb(0, 0, 255)');
 
     // Test via a non-registered custom property.
     test_attr('--x',
