--- a/devtools/client/debugger/test/mochitest/examples/doc-content-script-sources.html
+++ b/devtools/client/debugger/test/mochitest/examples/doc-content-script-sources.html
@@ -1,6 +1,6 @@
- 
-
-
+ <!-- This Source Code Form is subject to the terms of the Mozilla Public
+    - License, v. 2.0. If a copy of the MPL was not distributed with this
+    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,5 +9,9 @@
   </head>
 
   <body>
+     <script>
+        function pageScript() {}
+     </script>
+     <iframe src="doc-strict.html"></iframe>
   </body>
-
+</html>
