--- a/testing/web-platform/tests/html/canvas/offscreen/manual/layers/unclosed-layers.w.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/manual/layers/unclosed-layers.w.html
@@ -3,7 +3,7 @@
 <link rel="match" href="unclosed-layers-expected.html">
 <title>Canvas test: unclosed-layers</title>
 <h1>unclosed-layers</h1>
-<p class="desc">Check that layers are rendered even if not closed.</p>
+<p class="desc">Check that unclosed layers aren't rendered.</p>
 <canvas id="canvas" width="1" height="1">
   <p class="fallback">FAIL (fallback content)</p>
 </canvas>
@@ -15,9 +15,8 @@
 
     ctx.fillStyle = 'purple';
     ctx.fillRect(60, 60, 75, 50);
-    ctx.globalAlpha = 0.5;
 
-    ctx.beginLayer({filter: {name: 'dropShadow', dx: -2, dy: 2}});
+    ctx.beginLayer();
     ctx.fillRect(40, 40, 75, 50);
     ctx.fillStyle = 'grey';
     ctx.fillRect(50, 50, 75, 50);
